Add -agentpath analysis.